# melody-cli

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  install.ps1  install.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
src/melody/: __main__.py
src/melody/cli/: app.py  interactive.py
src/melody/cli/commands/: config.py  convert.py  download.py  fix.py  history.py  report.py  search.py
src/melody/core/: converter.py  downloader.py  searcher.py
src/melody/services/: config_service.py  history_service.py  progress_service.py
src/melody/utils/: ffmpeg.py  validators.py
src/sonic/: __main__.py
src/sonic/cli/: app.py  interactive.py
src/sonic/cli/commands/: config.py  convert.py  download.py  history.py  search.py
src/sonic/core/: downloader.py  searcher.py
src/sonic/services/: config_service.py  history_service.py
src/sonic/utils/: ffmpeg.py  validators.py
tests/: test_config_service.py  test_downloader.py  test_history_service.py
