[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "melody-mp3"
version = "1.0.0"
description = "Fast YouTube to MP3 downloader — CLI tool for music lovers"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "aryansyach", email = "aryansyach4@gmail.com" }]
keywords = ["youtube", "mp3", "downloader", "cli", "music", "audio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "typer[all]>=0.12",
    "rich>=13.7",
    "yt-dlp>=2024.1",
    "platformdirs>=4.0",
    "tomli-w>=1.0",
    "questionary>=2.0",
    "static-ffmpeg>=2.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
melody = "melody.cli.app:main"

[project.urls]
Repository = "https://github.com/0xAre/melody-cli"
Issues = "https://github.com/0xAre/melody-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/melody"]

[tool.ruff]
line-length = 100
target-version = "py310"
